test/scc/decl/semantic-errors/015.t
typedef typedef int int32;